# locale_config

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: quality-ci.yml  wait-all-checks.yaml
src/: lib.rs
