[package]
name = "locale_config"
version = "0.3.1-alpha.0"
edition = "2021"
description = """
Maintains locale preferences for process and thread and initialises them by
inspecting the system for user preference.
"""
authors = [
    "Jan Hudec <bulb@ucw.cz>",
    "Eir Nym <eirnym@gmail.com>"
]
license = "MIT"

documentation = "https://docs.rs/locale_config/"
repository = "https://github.com/eirtools/locale_config/"
readme = "README.md"
keywords = ["i18n"]
categories = ["os"]
exclude = ["/ci/*", "/.travis.yml", "/appveyor.yml"]

[package.metadata.release]
upload-doc = true

[dependencies]
lazy_static = "1.5.0"
regex-lite = "0.1.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnls"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSLocale", "NSString"] }
